--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg-promise": "^11.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
